# eventos-automaticos

./: .gitignore  NOTES.md  README.md  README.rst  communities.toml  env.sample  graphql_query.py  justfile  main.py  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: publish.yml
events/pydata-granada/: 2023-06-22_3er-MeetUp-de-PyData-Granada-(solo-presencial)_293781212.json  2023-11-16_4º-MeetUp-de-PyData-Granada-(solo-presencial)_296794509.json  2023-12-14_5º-MeetUp-de-PyData-Granada---Cell-Painting-y-Eficiencia-en-la-nube_297653701.json  2024-02-22_6º-MeetUp-de-PyData-Granada---IA-Generativas-+-Clasificación-de-imágenes-médicas_298652538.json  2024-02-22_6º-MeetUp-de-PyData-Granada:-IA-Generativas-+-Clasificación-de-imágenes-médicas_298652538.json  2024-03-14_PyDay-2024-|-1-keynote-+-10-charlas-relámpago_299507615.json  2024-03-14_PyDay-2024-|-1-keynote-+-8-charlas-relámpago_299507615.json  2024-05-23_7º-MeetUp-de-PyData-Granada---IA-aplicada-a-optimizar-ventas-e-ingenería-civil_300879864.json  2024-05-23_7º-MeetUp-de-PyData-Granada---IA-aplicada-a-optimizar-ventas-e-ingeniería-civil_300879864.json  2024-10-17_8º-MeetUp-de-PyData-Granada:-Datos-Abiertos-+-Machine-Learning-en-Alzheimer_303481407.json  2024-10-17_8º-MeetUp-de-PyData-Granada_303481407.json
events/pydata-ibiza/: 2023-10-26_Innovación,-emprendimiento-y-trabajo-en-remoto_296356503.json  2024-09-12_Ciberseguridad-e-Inteligencia-Artificial_302975941.json
events/pydata-madrid/: 2023-05-10_JupyterCon-2023_292888002.json  2023-05-25_(TBC)-Reunión-mayo_293471620.json  (+25 more)
(+188 files in other folders)
