[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "telegram_python_es"
authors = [{name = "Equipo PyCamp España", email = "pycampes@gmail.com"}]
readme = "README.md"
dynamic = ["version", "description"]
requires-python = ">=3.11"
dependencies = [
  "httpx",
]

[project.urls]
Home = "https://pycamp.es/"
