[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "telegram_python_es"
authors = [{name = "Equipo PyCamp España", email = "pycampes@gmail.com"}]
readme = "README.md"
dynamic = ["version", "description"]
requires-python = ">=3.11"
dependencies = [
    "click",
    "httpx",
    "python-dateutil",
    "PyJWT",
    "cryptography==39.0.0",
    "tenacity>=8.0.0",
]

[project.urls]
Home = "https://pycamp.es/"

[project.scripts]
fetch_upcoming_events = "telegram_python_es.cli:cli"

[tools.isort]
profile = "black"
